fix nav bar problem with text jumping up at large size
still have text sizing badly at less than 900~px.. need to use flex-box probably

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ header h1 {
 	box-sizing: border-box;
 	font-size: 4vh;
 	font-family: 'Berkshire Swash', cursive;
+	height: 10vh;
 	position: relative;
 	text-align: center;
 }
@@ -89,17 +90,19 @@ img {
 	}
 	nav {
 		background-color: #2c2623;
-		box-sizing: border-box;
 		display: block;
 		height: 6.5vh;
-		padding-bottom: 10px;
+		padding-bottom: 2px;
+		text-align: center;
 	}
 	nav ul {
+		height: 6.5vh;
 		list-style-type: none;
 	}
 	nav ul li {
 		display: inline-block;
-		width: 19.5%;
+		height: 6.5vh;
+		width: 18%;
 	}
 	nav ul li a {
 		box-sizing: border-box;
@@ -108,7 +111,8 @@ img {
 		display: block;
 		font-size: 3vw;
 		font-family: 'Coiny', cursive;
-		padding-bottom: 5px;
+		height: 6.5vh;
+		padding-bottom: 2px;
 		text-align: center;
 		text-decoration: none;
 		height: 4vh;
@@ -116,6 +120,7 @@ img {
 	nav ul li a:hover {
 		background-color: #DED7C4;
 		color: #2c2623;
+		height: 6.5vh;
 	}
 }
 
